// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Distribution gap renders 1`] = `
<div
  class="StyledGrommet-gGRXwz fDhYVV"
>
  <div
    class="StyledBox-bStriS iZnljK"
  >
    <div
      class="StyledBox-bStriS bNVUBj"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs ebfbnM"
    />
    <div
      class="StyledBox-bStriS bNVUBj"
    >
      <div
        class="StyledBox-bStriS fgyXyl"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs iswUbf"
      />
      <div
        class="StyledBox-bStriS eTIBXC"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledBox-bStriS iZnljK"
  >
    <div
      class="StyledBox-bStriS bNVUBj"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs jRRtxU"
    />
    <div
      class="StyledBox-bStriS bNVUBj"
    >
      <div
        class="StyledBox-bStriS fgyXyl"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs jrJmqe"
      />
      <div
        class="StyledBox-bStriS eTIBXC"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledBox-bStriS iZnljK"
  >
    <div
      class="StyledBox-bStriS bNVUBj"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs cCIVcT"
    />
    <div
      class="StyledBox-bStriS bNVUBj"
    >
      <div
        class="StyledBox-bStriS fgyXyl"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs cbEIii"
      />
      <div
        class="StyledBox-bStriS eTIBXC"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledBox-bStriS iZnljK"
  >
    <div
      class="StyledBox-bStriS bNVUBj"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs edutSJ"
    />
    <div
      class="StyledBox-bStriS bNVUBj"
    >
      <div
        class="StyledBox-bStriS fgyXyl"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs iTpocx"
      />
      <div
        class="StyledBox-bStriS eTIBXC"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Distribution renders 1`] = `
<div
  class="StyledGrommet-gGRXwz fDhYVV"
/>
`;

exports[`Distribution values renders 1`] = `
<div
  class="StyledGrommet-gGRXwz fDhYVV"
>
  <div
    class="StyledBox-bStriS iZnljK"
  >
    <div
      class="StyledBox-bStriS fVmMmk"
    >
      <span>
        20
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs ebfbnM"
    />
    <div
      class="StyledBox-bStriS crtUle"
    >
      <div
        class="StyledBox-bStriS bNVUBj"
      >
        <span>
          3
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs iswUbf"
      />
      <div
        class="StyledBox-bStriS ibBFrO"
      >
        <div
          class="StyledBox-bStriS fgyXyl"
        >
          <span>
            2
          </span>
        </div>
        <div
          class="StyledBox__StyledBoxGap-ixLlSs ebfbnM"
        />
        <div
          class="StyledBox-bStriS eTIBXC"
        >
          <span>
            1
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
